- fix tutorial link - add option to make polygons dotted

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -790,13 +790,13 @@ BEGIN
     EDITTEXT        IDC_EDITPACKAGE,74,8,50,14,ES_AUTOHSCROLL | ES_NUMBER
 END
 
-IDD_PREFERENCES DIALOGEX 0, 0, 354, 142
+IDD_PREFERENCES DIALOGEX 0, 0, 355, 142
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Preferences"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Ok",IDOK,238,121,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,297,121,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,298,121,50,14
     CONTROL         "Use box for fake ego",IDC_CHECKUSEBOXEGO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,9,83,10
     EDITTEXT        IDC_FAKEEGOX,97,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "x",IDC_STATIC,126,10,8,8,SS_CENTERIMAGE
@@ -804,22 +804,22 @@ BEGIN
     CONTROL         "Drawing controls have grid lines",IDC_DRAWGRIDLINES,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,20,140,14
     CONTROL         "Scale tracing images",IDC_SCALETRACINGIMAGES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,36,95,10
-    CONTROL         "Use auto-suggest",IDC_CHECKAUTOSUGGEST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,49,98,10
+    CONTROL         "Use auto-suggest",IDC_CHECKAUTOSUGGEST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,50,98,10
     CONTROL         "Automatically load last game on open.",IDC_CHECKAUTOLOADGAME,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,63,137,10
-    CONTROL         "Views: dupe new cels",IDC_CHECKDUPENEWCELS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,77,97,10
-    CONTROL         "Open some SCI01 games",IDC_CHECKSCI01,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,91,118,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,64,137,10
+    CONTROL         "Views: dupe new cels",IDC_CHECKDUPENEWCELS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,78,97,10
+    CONTROL         "Draw pic polygons as dotted",IDC_CHECKSCI01,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,92,118,10
     CONTROL         "Enable browse info",IDC_BROWSEINFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,175,21,101,10
     CONTROL         "Auto code completion",IDC_CODECOMPLETION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,34,97,10
     CONTROL         "Parameter info",IDC_PARAMINFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,46,89,10
     CONTROL         "Hover tips",IDC_HOVERTIPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,59,92,10
-    GROUPBOX        "Script editor",IDC_GROUP1,163,7,184,72
+    GROUPBOX        "Script editor",IDC_GROUP1,164,7,184,72
     CONTROL         "Play sound when compile fails",IDC_COMPILEERRORSOUND,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,105,116,10
-    COMBOBOX        IDC_COMBO_MIDIDEVICE,214,87,133,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,106,116,10
+    COMBOBOX        IDC_COMBO_MIDIDEVICE,215,87,133,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Midi device:",IDC_STATIC1,145,89,55,8,0,WS_EX_RIGHT
     CONTROL         "Use original SCI aspect ratio",IDC_CHECK_ASPECTRATIO,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,119,106,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,120,106,10
 END
 
 IDD_VPC DIALOGEX 0, 0, 182, 20
@@ -1772,7 +1772,7 @@ BEGIN
     IDD_PREFERENCES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 347
+        RIGHTMARGIN, 348
         VERTGUIDE, 61
         VERTGUIDE, 97
         TOPMARGIN, 7
