- support for adjusting HSL and tint of palette on the fly

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1501,16 +1501,17 @@ BEGIN
     CONTROL         "Used color",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,10,49,10
     PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,226,38,60,14
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,164,60,14
-    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,130,60,14
+    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,184,60,14
+    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,150,60,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
-    EDITTEXT        IDC_EDITRANGE,226,73,60,54,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITRANGE,226,93,60,54,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,56,60,14
-    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,147,60,14
-    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,181,60,14
+    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,167,60,14
+    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,201,60,14
     CONTROL         "Preview palette cycling",IDC_CHECKPREVIEWCYCLING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,117,233,100,10
     CONTROL         "<-",IDC_BUTTONCYCLELEFT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,64,231,19,15
     CONTROL         "->",IDC_BUTTONCYCLERIGHT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,88,230,20,16
+    PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,226,73,60,14
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
@@ -1524,10 +1525,11 @@ BEGIN
     PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,224,197,62,14
     PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,224,159,62,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
-    EDITTEXT        IDC_EDITRANGE,224,77,62,76,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITRANGE,224,93,62,60,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,224,56,62,14
     PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,224,215,60,14
     PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,224,178,62,14
+    PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,224,73,60,14
 END
 
 IDD_DECOMPILER DIALOGEX 0, 0, 607, 303
@@ -1606,19 +1608,18 @@ BEGIN
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
 END
 
-IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 309, 177
+IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Gradients"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,198,156,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,252,156,50,14
-    CONTROL         "",IDC_CHOOSECOLORSTATIC,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,187,163
-    PUSHBUTTON      "Color A",IDC_BUTTONCENTER,199,7,50,14
-    PUSHBUTTON      "Color B",IDC_BUTTONEDGES,252,7,50,14
-    CONTROL         "A - B",IDC_RADIOLINEAR,"Button",BS_AUTORADIOBUTTON | BS_NOTIFY | WS_GROUP,211,46,31,10
-    CONTROL         "B - A - B",IDC_RADIOCENTER,"Button",BS_AUTORADIOBUTTON | BS_NOTIFY,211,60,42,10
-    GROUPBOX        "Gradient type",IDC_STATIC2,201,30,101,54,WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK,6,87,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,60,87,50,14
+    PUSHBUTTON      "Color A",IDC_BUTTONCENTER,7,7,50,14
+    PUSHBUTTON      "Color B",IDC_BUTTONEDGES,60,7,50,14
+    CONTROL         "A - B",IDC_RADIOLINEAR,"Button",BS_AUTORADIOBUTTON | BS_NOTIFY | WS_GROUP,19,46,31,10
+    CONTROL         "B - A - B",IDC_RADIOCENTER,"Button",BS_AUTORADIOBUTTON | BS_NOTIFY,19,60,42,10
+    GROUPBOX        "Gradient type",IDC_STATIC2,9,30,101,54,WS_GROUP
 END
 
 IDD_PICCOMMANDS_VGA1 DIALOGEX 0, 0, 117, 277
@@ -1677,6 +1678,28 @@ BEGIN
     COMBOBOX        IDC_COMBOFROM,51,4,93,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "To:",IDC_STATIC2,7,23,31,8
     COMBOBOX        IDC_COMBOTO,51,21,93,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+END
+
+IDD_PALETTEADJUST DIALOGEX 0, 0, 205, 140
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Adjust colors"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,93,119,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,148,119,50,14
+    CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,53,7,103,15
+    RTEXT           "Hue:",IDC_STATICHUE,7,10,46,8
+    EDITTEXT        IDC_EDITHUE,164,7,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_SLIDERSATURATION,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,53,30,103,15
+    RTEXT           "Saturation:",IDC_STATICSATURATION,7,33,46,8
+    EDITTEXT        IDC_EDITSATURATION,164,30,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_SLIDERBRIGHTNESS,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,53,53,103,15
+    RTEXT           "Lightness:",IDC_STATICBRIGHTNESS,7,56,46,8
+    EDITTEXT        IDC_EDITBRIGHTNESS,164,53,34,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Tint",IDC_BUTTONCOLOR,"Button",BS_OWNERDRAW | WS_TABSTOP,57,96,23,19
+    CONTROL         "",IDC_SLIDERTINTSTRENGTH,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,53,75,103,15
+    RTEXT           "Tint strength:",IDC_STATICTINTSTRENGTH,7,78,46,8
+    EDITTEXT        IDC_EDITTINTSTRENGTH,164,75,34,14,ES_AUTOHSCROLL | ES_NUMBER
 END
 
 
@@ -2246,9 +2269,9 @@ BEGIN
     IDD_DIALOGGRADIENTS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 110
         TOPMARGIN, 7
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 101
     END
 
     IDD_PICCOMMANDS_VGA1, DIALOG
@@ -2283,6 +2306,16 @@ BEGIN
         VERTGUIDE, 39
         TOPMARGIN, 7
         BOTTOMMARGIN, 62
+    END
+
+    IDD_PALETTEADJUST, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 198
+        VERTGUIDE, 53
+        VERTGUIDE, 156
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 133
     END
 END
 #endif    // APSTUDIO_INVOKED
