- support for previewing palettes in pic editor - support saving palette mods as resources - support for message import/export

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -479,6 +479,15 @@ BEGIN
     BEGIN
         MENUITEM "Use &windows font",           ID_MAKEFONT
     END
+    POPUP "&Message"
+    BEGIN
+        MENUITEM "&Export to text file",        ID_MESSAGE_EXPORT
+        MENUITEM "&Import from text file",      ID_MESSAGE_IMPORT
+        MENUITEM SEPARATOR
+        MENUITEM "Add &new",                    IDC_BUTTONADDNEW
+        MENUITEM "Add &sequence",               IDC_BUTTONADDSEQ
+        MENUITEM "Add &clone",                  IDC_BUTTONCLONE
+    END
     POPUP "&View"
     BEGIN
         MENUITEM "&Import image sequence",      33001
@@ -1501,17 +1510,18 @@ BEGIN
     CONTROL         "Used color",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,10,49,10
     PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,226,38,60,14
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,184,60,14
-    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,150,60,14
+    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,167,60,14
+    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,133,60,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
-    EDITTEXT        IDC_EDITRANGE,226,93,60,54,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,56,60,14
-    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,167,60,14
-    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,201,60,14
+    EDITTEXT        IDC_EDITRANGE,226,87,60,45,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,54,60,14
+    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,150,60,14
+    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,183,60,14
     CONTROL         "Preview palette cycling",IDC_CHECKPREVIEWCYCLING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,117,233,100,10
     CONTROL         "<-",IDC_BUTTONCYCLELEFT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,64,231,19,15
     CONTROL         "->",IDC_BUTTONCYCLERIGHT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,88,230,20,16
-    PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,226,73,60,14
+    PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,226,70,60,14
+    PUSHBUTTON      "Add as &resource",IDC_BUTTON_SAVEPALETTE,226,200,60,14
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
@@ -1644,6 +1654,7 @@ BEGIN
     EDITTEXT        IDC_EDITNAME,44,74,47,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_TABWHICHLIST,"SysTabControl32",TCS_OWNERDRAWFIXED,7,40,103,16
     PUSHBUTTON      "Edit",ID_UPLOADNAME,92,74,19,14,BS_ICON | BS_FLAT
+    COMBOBOX        IDC_COMBO_PALETTE,44,163,66,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_OUTPUTPANE DIALOGEX 0, 0, 309, 177
@@ -2698,6 +2709,12 @@ BEGIN
     IDC_BUTTONADDSEQ        "Add another entry in the current sequence\nAdd subsequent"
     IDC_BUTTONCLONE         "Clone the current message entry\nClone entry"
     IDC_BUTTONADDNEW        "Add a new empty message entry\nNew entry"
+END
+
+STRINGTABLE
+BEGIN
+    ID_MESSAGE_EXPORT       "Export to tab delimited text file"
+    ID_MESSAGE_IMPORT       "Import from tab delimited text file"
 END
 
 #endif    // English (United States) resources
