- extract all dialog has support for message txt files

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1481,22 +1481,23 @@ BEGIN
     LTEXT           "Final",IDC_STATIC2,7,143,16,8
 END
 
-IDD_EXTRACTALL DIALOGEX 0, 0, 309, 146
+IDD_EXTRACTALL DIALOGEX 0, 0, 309, 154
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Extract All Resources"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,252,125,50,14
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,89,295,14
-    EDITTEXT        IDC_EDIT,7,108,295,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Cancel",IDCANCEL,252,133,50,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,97,295,14
+    EDITTEXT        IDC_EDIT,7,115,295,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_EDIT1,60,7,183,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse",IDC_BUTTONBROWSE,252,7,50,14
     LTEXT           "&Folder:",IDC_STATIC1,7,9,47,8,0,WS_EX_RIGHT
     CONTROL         "Extract &resources",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,28,96,10
     CONTROL         "Generate &bitmaps for &pics",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,42,98,10
     CONTROL         "Generate &bitmaps for &views",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,56,104,10
-    DEFPUSHBUTTON   "&Extract",IDC_EXTRACT,195,125,50,14
+    DEFPUSHBUTTON   "&Extract",IDC_EXTRACT,195,133,50,14
     CONTROL         "&Disassemble scripts",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,70,77,10
+    CONTROL         "Export &message text",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,84,83,10
 END
 
 IDD_PALETTE_EDITOR DIALOGEX 0, 0, 293, 255
@@ -2213,7 +2214,7 @@ BEGIN
         RIGHTMARGIN, 302
         VERTGUIDE, 60
         TOPMARGIN, 7
-        BOTTOMMARGIN, 139
+        BOTTOMMARGIN, 147
     END
 
     IDD_PALETTE_EDITOR, DIALOG
