- allow names in saveresource dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -786,17 +786,19 @@ BEGIN
     CONTROL         "Use random patterns",IDC_USERANDOMPATTERNS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,79,84,10
 END
 
-IDD_RESOURCENUM DIALOGEX 0, 0, 131, 73
+IDD_RESOURCENUM DIALOGEX 0, 0, 149, 87
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Save"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "Resource number:",IDC_STATIC2,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,32,61,10,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITRESOURCE,74,29,50,14,ES_AUTOHSCROLL | ES_NUMBER
-    DEFPUSHBUTTON   "OK",IDOK,7,52,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,74,52,50,14
+    EDITTEXT        IDC_EDITRESOURCE,74,29,68,14,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "OK",IDOK,7,66,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,74,66,68,14
     CONTROL         "Package number:",IDC_STATIC1,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,11,61,10,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITPACKAGE,74,8,50,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDITPACKAGE,74,8,68,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Optional name:",IDC_STATIC3,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,52,61,10,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITNAME,74,49,68,14,ES_AUTOHSCROLL
 END
 
 IDD_PREFERENCES DIALOGEX 0, 0, 355, 142
@@ -1798,10 +1800,10 @@ BEGIN
     IDD_RESOURCENUM, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 124
+        RIGHTMARGIN, 142
         VERTGUIDE, 74
         TOPMARGIN, 7
-        BOTTOMMARGIN, 66
+        BOTTOMMARGIN, 80
     END
 
     IDD_PREFERENCES, DIALOG
