--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -657,6 +657,9 @@
     <ClCompile Include="Src\MFCDocuments\DocumentWithPaletteChoices.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Dialogs\PicDimensionsDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanionLib.h">
@@ -1365,6 +1368,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\MFCDocuments\DocumentWithPaletteChoices.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Dialogs\PicDimensionsDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
