--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -215,34 +215,49 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
     <None Include="Files\Decompiler\Decompiler.ini" />
     <None Include="Files\Decompiler\game.sh" />
     <None Include="Files\Licenses\cppformat_README.rst" />
-    <None Include="Files\Samples\cursors\Arrow 1.bin" />
-    <None Include="Files\Samples\cursors\Arrow Small.bin" />
-    <None Include="Files\Samples\cursors\Arrow Up.bin" />
-    <None Include="Files\Samples\cursors\Cross 1.bin" />
-    <None Include="Files\Samples\cursors\Cross 2.bin" />
-    <None Include="Files\Samples\cursors\Diagonal Arrow 1.bin" />
-    <None Include="Files\Samples\cursors\Diagonal Arrow 2.bin" />
-    <None Include="Files\Samples\cursors\Error Cursor.bin" />
-    <None Include="Files\Samples\cursors\Hand Point.bin" />
-    <None Include="Files\Samples\cursors\Help Arrow.bin" />
-    <None Include="Files\Samples\cursors\Hourglass 1.bin" />
-    <None Include="Files\Samples\cursors\Hourglass 2.bin" />
-    <None Include="Files\Samples\cursors\Hourglass Arrow.bin" />
-    <None Include="Files\Samples\cursors\Left-Right Arrow.bin" />
-    <None Include="Files\Samples\cursors\Move Arrow.bin" />
-    <None Include="Files\Samples\cursors\Scumm Style 1.bin" />
-    <None Include="Files\Samples\cursors\Scumm Style 2.bin" />
-    <None Include="Files\Samples\cursors\Text Cursor 1.bin" />
-    <None Include="Files\Samples\cursors\Text Cursor 2.bin" />
-    <None Include="Files\Samples\cursors\Up-Down Arrow.bin" />
-    <None Include="Files\Samples\fonts\BriPro.bin" />
-    <None Include="Files\Samples\palettes\DefaultPalette.bin" />
-    <None Include="Files\Samples\pics\Black Screen.bin" />
-    <None Include="Files\Samples\pics\Bliss.bin" />
-    <None Include="Files\Samples\pics\Criss Cross.bin" />
-    <None Include="Files\Samples\pics\Room 1.bin" />
-    <None Include="Files\Samples\pics\Room 2.bin" />
-    <None Include="Files\Samples\pics\Simple.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Arrow 1.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Arrow Small.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Arrow Up.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Cross 1.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Cross 2.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Diagonal Arrow 1.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Diagonal Arrow 2.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Error Cursor.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Hand Point.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Help Arrow.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Hourglass 1.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Hourglass 2.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Hourglass Arrow.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Left-Right Arrow.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Move Arrow.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Scumm Style 1.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Scumm Style 2.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Text Cursor 1.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Text Cursor 2.bin" />
+    <None Include="Files\Samples\SCI0\cursors\Up-Down Arrow.bin" />
+    <None Include="Files\Samples\SCI0\fonts\BriPro.bin" />
+    <None Include="Files\Samples\SCI0\pics\Black Screen.bin" />
+    <None Include="Files\Samples\SCI0\pics\Bliss.bin" />
+    <None Include="Files\Samples\SCI0\pics\Cave.bin" />
+    <None Include="Files\Samples\SCI0\pics\Criss Cross.bin" />
+    <None Include="Files\Samples\SCI0\pics\Room 1.bin" />
+    <None Include="Files\Samples\SCI0\pics\Room 2.bin" />
+    <None Include="Files\Samples\SCI0\pics\Simple.bin" />
+    <None Include="Files\Samples\SCI0\views\Brian.bin" />
+    <None Include="Files\Samples\SCI0\views\Dead Icon.bin" />
+    <None Include="Files\Samples\SCI0\views\Door (Big).bin" />
+    <None Include="Files\Samples\SCI0\views\Door.bin" />
+    <None Include="Files\Samples\SCI0\views\Ego.bin" />
+    <None Include="Files\Samples\SCI0\views\Fire.bin" />
+    <None Include="Files\Samples\SCI0\views\Inv - Key.bin" />
+    <None Include="Files\Samples\SCI0\views\Key.bin" />
+    <None Include="Files\Samples\SCI0\views\Ranger.bin" />
+    <None Include="Files\Samples\SCI1.1\palettes\Default.bin" />
+    <None Include="Files\Samples\SCI1.1\palettes\King 5.bin" />
+    <None Include="Files\Samples\SCI1.1\palettes\Quest.bin" />
+    <None Include="Files\Samples\SCI1.1\palettes\Space 5.bin" />
+    <None Include="Files\Samples\SCI1.1\pics\Room 1.bin" />
+    <None Include="Files\Samples\SCI1.1\views\Box.bin" />
     <None Include="Files\Samples\views\Brian.bin" />
     <None Include="Files\Samples\views\Dead Icon.bin" />
     <None Include="Files\Samples\views\Door (Big).bin" />
