- wave import hardening

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1680,6 +1680,7 @@ BEGIN
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,25,131,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,7,42,72,8
     EDITTEXT        IDC_EDIT_DESCRIPTION,7,71,139,56,ES_MULTILINE | ES_READONLY
+    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,134,69,14
 END
 
 IDD_CONVERTTOPALETTE DIALOGEX 0, 0, 151, 69
