--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -179,6 +179,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="Files\Licenses\giflib-AUTHORS.txt" />
+    <Text Include="Files\Licenses\r8brain-License.txt" />
     <Text Include="Files\TemplateGame\SCI0\game.txt" />
     <Text Include="Files\TemplateGame\SCI1.1\INSTALL.TXT" />
     <Text Include="ReadMe.txt" />
