--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -749,16 +749,16 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 265, 170
+IDD_ABOUTBOX DIALOGEX 0, 0, 265, 175
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About SCICompanion"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_STATIC4,11,17,20,20
+    ICON            IDR_MAINFRAME,IDC_STATIC4,11,17,21,20
     LTEXT           "SCICompanion version 3.0.0.8",IDC_STATIC1,50,7,101,8,SS_NOPREFIX
     LTEXT           "Copyright (C) 2015",IDC_STATIC2,50,25,119,8
     DEFPUSHBUTTON   "OK",IDOK,208,7,50,16,BS_FLAT | WS_GROUP
-    LTEXT           "By Phil Fortier (IceFall Games)\n\n\nParts of code (""Crystal Edit"" text editor) by Andrei Stcherbatchenko\n\nContains decompression routines from the ScummVM project.\n\ncppformat library  Copyright (c) 2012 - 2015, Victor Zverovich",IDC_STATIC3,50,48,189,115
+    LTEXT           "By Phil Fortier (IceFall Games)\n\n\nParts of code (""Crystal Edit"" text editor) by Andrei Stcherbatchenko\n\nContains decompression routines from the ScummVM project.\n\ncppformat library  Copyright (c) 2012 - 2015, Victor Zverovich\n\nSample rate converter designed by Aleksey Vaneev of Voxengo",IDC_STATIC3,50,44,189,124
 END
 
 IDD_DIALOGCOLOR DIALOGEX 0, 0, 152, 122
@@ -1786,7 +1786,7 @@ BEGIN
         RIGHTMARGIN, 258
         VERTGUIDE, 50
         TOPMARGIN, 7
-        BOTTOMMARGIN, 163
+        BOTTOMMARGIN, 168
     END
 
     IDD_DIALOGCOLOR, DIALOG
