- updates to template game, sample fonts

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -117,3 +117,8 @@ n995=SettingsViews
 n2099=DeathButtons
 n2000=DeathView
 n999=MainCursor
+[Audio]
+n005=ED-11-8
+n006=ED-11-16
+n007=ED-22-8
+n008=ED-22-16
