--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -253,8 +253,12 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
     <None Include="Files\Samples\SCI0\views\Inv - Key.bin" />
     <None Include="Files\Samples\SCI0\views\Key.bin" />
     <None Include="Files\Samples\SCI0\views\Ranger.bin" />
+    <None Include="Files\Samples\SCI1.1\fonts\Sierra Sans.bin" />
+    <None Include="Files\Samples\SCI1.1\fonts\Sierra Serif.bin" />
+    <None Include="Files\Samples\SCI1.1\fonts\Sierra Small A.bin" />
+    <None Include="Files\Samples\SCI1.1\fonts\Sierra Small B.bin" />
     <None Include="Files\Samples\SCI1.1\palettes\Default.bin" />
-    <None Include="Files\Samples\SCI1.1\palettes\King 5.bin" />
+    <None Include="Files\Samples\SCI1.1\palettes\King 6.bin" />
     <None Include="Files\Samples\SCI1.1\palettes\Quest.bin" />
     <None Include="Files\Samples\SCI1.1\palettes\Space 5.bin" />
     <None Include="Files\Samples\SCI1.1\pics\Black 200.bin" />
