- support overlaying pics backgrounds - support custom palette ranges when importing backgrounds.

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -812,6 +812,7 @@
     <Image Include="res\prioritylines.ico" />
     <Image Include="res\rect.ico" />
     <Image Include="res\rect_solid.ico" />
+    <Image Include="res\refresh.ico" />
     <Image Include="res\Right.bmp" />
     <Image Include="res\roundedrect.ico" />
     <Image Include="res\roundedrect_solid.ico" />
